--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "import": "^0.0.6",
     "prettier": "^2.8.7"
   },
   "eslintConfig": {
