--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.8",
+    "react-hook-form": "^7.51.1",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
     "import": "^0.0.6",
-    "prettier": "^2.8.7"
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3"
   },
   "eslintConfig": {
     "extends": [
