--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
     "import": "^0.0.6",
